--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,14 @@
 click==8.1.3
+Faker==18.5.1
 Flask==2.2.3
+Flask-SQLAlchemy==3.0.3
+gunicorn==20.1.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.2
+python-dateutil==2.8.2
 python-dotenv==1.0.0
+six==1.16.0
+SQLAlchemy==2.0.10
+typing_extensions==4.5.0
 Werkzeug==2.2.3
