--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,14 @@
-alembic==1.10.3
-black==23.3.0
 click==8.1.3
-exceptiongroup==1.1.1
+Faker==18.5.1
 Flask==2.2.3
-Flask-Migrate==4.0.4
 Flask-SQLAlchemy==3.0.3
 gunicorn==20.1.0
-iniconfig==2.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
-Mako==1.2.4
 MarkupSafe==2.1.2
-mypy-extensions==1.0.0
-packaging==23.1
-pathspec==0.11.1
-platformdirs==3.2.0
-pluggy==1.0.0
-psycopg2==2.9.6
-pytest==7.3.1
-python-dotenv==0.21.0
-SQLAlchemy==2.0.9
-tomli==2.0.1
+python-dateutil==2.8.2
+python-dotenv==1.0.0
+six==1.16.0
+SQLAlchemy==2.0.10
 typing_extensions==4.5.0
 Werkzeug==2.2.3
