--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,9 @@ gunicorn==20.1.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.2
+psycopg2-binary==2.9.6
 python-dateutil==2.8.2
-python-dotenv==1.0.0
+python-dotenv==
 six==1.16.0
 SQLAlchemy==2.0.10
 typing_extensions==4.5.0
