--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ alembic==1.11.1
 click==8.1.3
 Faker==18.5.1
 Flask==2.2.3
+Flask-Login==0.6.2
 Flask-Migrate==4.0.4
 Flask-SQLAlchemy==3.0.3
 gunicorn==20.1.0
@@ -11,7 +12,7 @@ Mako==1.2.4
 MarkupSafe==2.1.2
 psycopg2-binary==2.9.6
 python-dateutil==2.8.2
-python-dotenv
+python-dotenv==1.0.0
 six==1.16.0
 SQLAlchemy==2.0.10
 typing_extensions==4.5.0
