--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ Mako==1.2.4
 MarkupSafe==2.1.2
 psycopg2-binary==2.9.6
 python-dateutil==2.8.2
-python-dotenv==1.0.0
+python-dotenv
 six==1.16.0
 SQLAlchemy==2.0.10
 typing_extensions==4.5.0
